# ComfyUI-MOSS-TTS

./: .gitignore  LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
lib/: audio.py  delay_config.py  generation.py  model_state.py  presets.py  voice.py
nodes/: __init__.py  generate.py  loader.py  unload.py  voice_reference.py
tests/: conftest.py  test_audio.py  test_delay_config.py  test_generation.py  test_model_state.py  test_presets.py  test_voice.py
workflows/: basic_tts.json  voice_cloning.json
