[project]
name = "comfyui-moss-tts"
version = "0.1.0"
description = "ComfyUI custom nodes for MOSS-TTS 1.7B zero-shot voice cloning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "accelerate",
    "torchaudio",
    "librosa",
    "soundfile",
    "einops",
    "omegaconf",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/Eutectico/ComfyUI-MOSS-TTS"

[tool.comfy]
PublisherId = ""
DisplayName = "MOSS-TTS"
Icon = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --rootdir=tests --confcutdir=tests"
# --rootdir=tests prevents pytest's discovery from walking up into the package
# root and trying to import its __init__.py (which uses ComfyUI-style relative
# imports that only resolve when ComfyUI's loader runs the package).
# sys.path setup happens in tests/conftest.py.
